R-FCN change sets
- add position-sensitive RoI pooling layer
- add online hard example mining related layers
- modify softmaxloss  and smoothL1loss layers
- enrich Matlab interface

--- a/windows/CommonSettings.props
+++ b/windows/CommonSettings.props
@@ -50,7 +50,7 @@
         <IncludePath>$(PythonDir)\include;$(IncludePath)</IncludePath>
     </PropertyGroup>
     <PropertyGroup Condition="'$(MatlabSupport)'=='true'">
-        <MatlabDir>C:\Program Files\MATLAB\R2014b</MatlabDir>
+        <MatlabDir>C:\Program Files\MATLAB\R2014a</MatlabDir>
         <LibraryPath>$(MatlabDir)\extern\lib\win64\microsoft;$(LibraryPath)</LibraryPath>
         <IncludePath>$(MatlabDir)\extern\include;$(MatlabDir)\toolbox\distcomp\gpu\extern\include;$(IncludePath)</IncludePath>
     </PropertyGroup>
